Add database implementation

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,6 @@
+spring.jpa.hibernate.ddl-auto=update
+spring.datasource.url=jdbc:postgresql://localhost:5432/web_pa
+spring.datasource.username=postgres
+spring.datasource.password=admin
 
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
