Solve DB connection

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,8 +1,12 @@
 server.port=8080
 
 spring.jpa.hibernate.ddl-auto=update
-spring.datasource.url=jdbc:postgresql://localhost:5432/web_pa
+spring.datasource.url=jdbc:postgresql://localhost:5432/postgres
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=password
+
+logging.level.org.springframework.web=INFO
+logging.level.com.example=DEBUG
+logging.level.org.springframework.security=DEBUG
 
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
