--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,4 +9,9 @@ logging.level.org.springframework.web=INFO
 logging.level.com.example=DEBUG
 logging.level.org.springframework.security=DEBUG
 
+spring.datasource.initialization-mode=always
+spring.datasource.initialize=true
+spring.datasource.schema=classpath:/init.sql
+spring.datasource.continue-on-error=true
+
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
