--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 server.port=8000
 
-spring.jpa.hibernate.ddl-auto=update
+#spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/codemates
 spring.datasource.username=postgres
 spring.datasource.password=admin
@@ -10,7 +10,6 @@ logging.level.com.example=DEBUG
 logging.level.org.springframework.security=DEBUG
 
 spring.datasource.initialization-mode=always
-spring.datasource.initialize=true
 spring.datasource.schema=classpath:/init.sql
 spring.datasource.continue-on-error=true
 
