fix login temporarily

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -3,7 +3,7 @@ server.port=8080
 #spring.jpa.hibernate.ddl-auto=update
 spring.datasource.url=jdbc:postgresql://localhost:5432/codemates
 spring.datasource.username=postgres
-spring.datasource.password=admin
+spring.datasource.password=password
 
 logging.level.org.springframework.web=INFO
 logging.level.com.example=DEBUG
