--- a/src/main/docker/Dockerfile
+++ b/src/main/docker/Dockerfile
@@ -1,8 +1,8 @@
 FROM openjdk:8-jre
 WORKDIR /app
 VOLUME ["/app"]
-COPY maven/app.jar app.jar
+COPY maven/codemates-0.0.1-SNAPSHOT.jar codemates-0.0.1-SNAPSHOT.jar
 COPY maven/start.sh start.sh
-COPY maven/wait-for-it.sh wait-for-it.sh
-RUN sh -c 'touch app.jar'
+COPY maven/delay.sh delay.sh
+RUN sh -c 'touch codemates-0.0.1-SNAPSHOT.jar'
 ENTRYPOINT ["./start.sh"]
